revert two cases can't use toList()
List<Object> can't use toList to get the "Object" type